--- a/templates/register.html
+++ b/templates/register.html
@@ -1,16 +1,16 @@
-<html>
-    <head>
-        <title>The Book of Faces</title>
-    </head>
-    <body>
-        <div class="container">
-            <form class="signin">
-                <h2 class="signin-heading">Register a new account</h2>
-                <input type="text" class="form-control" placeholder="Username" name="username">
-                <input type="password" class="form-control" placeholder="Password" name="password">
-                <input type="password" class="form-control" placeholder="Password" name="password_verify">
-                <input type="submit" class="btn btn-lg btn-primary btn-block" value="Submit">
-            </form>
-        </div>
-    </body>
-</html>
+{% extends 'master.html' %}    
+{% block body %}
+    <form class="signin" method="POST" action="/">
+        <h2 class="signin-heading">Register a new account</h2>
+
+        <ul>
+            {% for message in get_flashed_messages() %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        <input type="text" class="form-control" placeholder="Username" name="username">
+        <input type="password" class="form-control" placeholder="Password" name="password">
+        <input type="password" class="form-control" placeholder="Password" name="password_verify">
+        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Submit">
+    </form>
+{% endblock %}
