Working with creating new accounts

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'master.html' %}    
 {% block body %}
-    <form class="signin" method="POST" action="/">
+    <form class="signin" method="POST" action="/create_account">
         <h2 class="signin-heading">Register a new account</h2>
 
         <ul>
