--- a/templates/master.html
+++ b/templates/master.html
@@ -5,6 +5,10 @@
         <link href="/static/css/main.css" rel="stylesheet">
     </head>
     <body>
+        <div class="menu-bar">
+            <a href="/"><button type="button" class="home-button btn btn-sm btn-block">Home</button></a>
+            <a href="/logout"><button type="button" class="logout-button btn btn-sm btn-block">Logout</button></a>
+        </div>
         <div class="container">
             {% block body %}{% endblock %}
         </div>
